force-app/main/default/objects/CustomFieldLabelling__c/CustomFieldLabelling__c.object-meta.xml
<CustomObject>
    <label>Custom Field Labelling</label>
    <nameField>
        <displayFormat>CFL-{0000}</displayFormat>
        <label>Custom Field Labelling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Field Labelling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>