force-app/main/default/objects/CustomFieldLabelling__c/fields/CaseFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>CaseFieldAPIName__c</fullName>
    <description>Its the API Name, 
The Std fields: Name, Id, ContactId
Std fields on Std objects: Contact.FirstName, Contact.MailingStreet, Account.Name
Custom fields: BirthPlace__c
Custom fields on Std objects: Account.Legacy_Id__c, Account.Legacy_Id__pc
Custom fields on Custom objects: SecondaryContact__r.Birth_Place__c</description>
    <inlineHelpText>Its the API Name. Examples: Name, Id, Account.Name, Account.Legacy_Id__c, Account.Legacy_Id__pc, SecondaryContact__r.Name, SecondaryContact__r.Birth_Place__c</inlineHelpText>
    <label>Case Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>