force-app/main/default/objects/CustomFieldLabelling__c/fields/CaseFieldLabel__c.field-meta.xml
<CustomField>
    <fullName>CaseFieldLabel__c</fullName>
    <description>The New label that you prefer</description>
    <inlineHelpText>The New label that you prefer</inlineHelpText>
    <label>Case Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>