force-app/main/default/objects/CustomFieldLabelling__c/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <description>Its the &quot;Type&quot; field value of Case. Need to make sure that all the values in Case.Type do exist here.</description>
    <inlineHelpText>Case.Type. If you cannot find a Type, ask your System Administrator to add it for you.</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Domestic Item Search</fullName>
            </value>
            <value>
                <fullName>Mail Redirection/Hold</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>