force-app/main/default/objects/CustomFieldLabelling__c/fields/CFLUsage__c.field-meta.xml
<CustomField>
    <fullName>CFLUsage__c</fullName>
    <description>2014-05 CCU - Added this field to differentiate CCU and SSSW. If this nothing is selected, then it is used by SSSW.</description>
    <inlineHelpText>Please specify the usage. If this is to be used for SSSW, then leave this field blank.</inlineHelpText>
    <label>CFL Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>