force-app/main/default/objects/CustomFieldLabelling__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>2014-05 - The initial UniqueKey is &quot;CaseFieldAPIName + CaseType&quot;. To differentiate with CCU, CFLUsage is added in front of UniqueKey.</description>
    <formula>TEXT(CFLUsage__c) + CaseFieldAPIName__c+TEXT( CaseType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>