force-app/main/default/objects/CustomFieldLabelling__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CaseType__c</columns>
    <columns>CaseFieldAPIName__c</columns>
    <columns>CaseFieldLabel__c</columns>
    <columns>UniqueKey__c</columns>
    <columns>CFLUsage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>